<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingPageLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topBar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:background="@drawable/round_top"
        android:paddingTop="32dp"
        android:paddingHorizontal="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintDimensionRatio="w, 1:1"
            tools:src="@mipmap/ic_launcher_round" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputHint"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInputText"
                android:inputType="textCapCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:id="@+id/saveProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_profile"/>


    </LinearLayout>


</LinearLayout>